Make small change to css for overflow issue

--- a/styles.css
+++ b/styles.css
@@ -76,10 +76,8 @@ body {
 }
 
 .bottom-section {
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   background-color: #ffffff;
-
-  height: 100%;
 }
 
 div.buttonsForCalculator {
